<resources>
    <string name="app_name">FleX</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="select_type_of_the_meal">Select type of the meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="search">Search</string>
    <string name="ingredients_measurements">Ingredients - Measurements</string>
    <string name="our_inspiration_meals">Our Inspiration Meals</string>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="see_more">See more...</string>
    <string name="countries">Countries</string>
    <string name="existing_user_sign_in">Existing User ? Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="stay_signed_in">Stay Signed In</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="backup">Backup</string>
    <string name="sync_now">Sync Now</string>
    <string name="begin_your_path_to_better_eating">Begin your path to better eating!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="welcome_to_your">Welcome To Your</string>
    <string name="fle_x">Fle-X</string>
    <string name="planner">Planner</string>
    <string name="profile">Profile</string>
    <string name="today_s_meals">Today\'s Meals</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="exit">Exit</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="login_failed">Login Failed</string>
    <string name="guest_entrance">Guest Entrance</string>
    <string name="do_you_want_to_continue_as_a_guest">Do you want to continue as a guest?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register_success">Register Success</string>
    <string name="password_doesn_t_match">Password doesn\'t match</string>
    <string name="password_must_be_at_least_4_characters_long_include_one_digit_one_uppercase_letter_one_special_character_and_no_spaces">Password must be at least 4 characters long, include one digit, one uppercase letter, one special character, and no spaces</string>
    <string name="emailRegex">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="passwordRegex"><![CDATA[^(?=.*[0-9])(?=.*[A-Z])(?=.*[@#$%^&+=!])(?=\\S+$).{4,}$]]></string>
    <string name="meal_deleted">Meal Deleted</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="_404">404</string>
    <string name="login_required">Login Required</string>
    <string name="you_need_to_log_in_to_access_this_feature">" You need to log in to access this feature."</string>
    <string name="guest_user_cannot_log_out">Guest user cannot log out.</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="logging_out">Logging out...</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exiting_the_app">Exiting the app...</string>
    <string name="please_check_your_network_settings_and_try_again">Please check your network settings and try again.</string>
    <string name="dismiss">Dismiss</string>
    <string name="retry">Retry</string>
    <string name="you_must_log_in_to_save_this_meal">You must log in to save this meal</string>
</resources>