<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginFragment.view.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight"
        android:padding="20dp">

        <Button
            android:id="@+id/btnSkip"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_entrance"
            android:textColor="@color/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_hero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSkip"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login_anim"
            app:lottie_speed="1" />
        <!-- Sign in Title -->

        <!-- Email Input Field -->


        <TextView
            android:id="@+id/title"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/existing_user_sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/animationView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toTopOf="@+id/animationView2"
            app:layout_constraintVertical_bias="0.833" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email_address"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLoginEditTetx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress|textAutoComplete"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/colorPrimaryVariant"

            app:layout_constraintTop_toBottomOf="@id/textField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:text="@string/stay_signed_in"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/passwordField"
            app:layout_constraintTop_toBottomOf="@id/passwordField" />

        <!-- Sign in Button -->
        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnSignIn"
            style="@style/ButtonSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="35dp"
            android:paddingVertical="2dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordField"
            app:spinning_bar_color="@color/colorAccent2" />

        <!-- Register Now Section -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn">

        </LinearLayout>

        <TextView
            android:id="@+id/txtDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="#00ADB5"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtDontHaveAccount"
            app:layout_constraintStart_toStartOf="@+id/txtDontHaveAccount"
            app:layout_constraintTop_toBottomOf="@+id/txtDontHaveAccount" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:weightSum="12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegister">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:background="@color/black" />

            <TextView
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/use_other_methods"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="3"
                android:background="@color/black" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>