<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerFragment.view.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_hero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/splash_animation"
            app:lottie_speed="1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/begin_your_path_to_better_eating"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/animationView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toTopOf="@+id/animationView2"
            app:layout_constraintVertical_bias="0.9" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email_address"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterEditTetx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress|textAutoComplete"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:layout_constraintTop_toBottomOf="@id/textField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:layout_constraintTop_toBottomOf="@id/passwordField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Sign in Button -->
        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnRegister"
            style="@style/ButtonSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="35dp"
            android:paddingVertical="2dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordField"
            app:spinning_bar_color="@color/colorPrimary" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back_img"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>