<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:id="@+id/swipe_refresh_layout">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        tools:context=".homeFragment.view.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/our_inspiration_meals"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:elevation="20dp"
                app:cardCornerRadius="25dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTextView">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imv_single_meal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_foreground" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_animation_meal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/random_image"
                        app:lottie_speed="0.6" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/categoriesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/categories"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <FrameLayout
                android:id="@+id/category_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/categoriesTextView">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryRecView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progress_bar_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorPrimary"
                    android:visibility="visible" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/category_frame_layout">

                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/ingredients"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/seeMoreTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/see_more"
                    android:gravity="right"
                    android:visibility="gone"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/ingredient_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linearLayout">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientdRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <ProgressBar
                    android:id="@+id/progress_bar_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorPrimary"
                    android:visibility="visible" />
            </FrameLayout>

            <TextView
                android:id="@+id/countriesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/countries"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/categoriesTextView"
                app:layout_constraintTop_toBottomOf="@id/ingredient_frame_layout" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/countriesTextView">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/countriesRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@id/countriesTextView" />

                <ProgressBar
                    android:id="@+id/progress_bar_countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorPrimary"
                    android:visibility="visible" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
